--- a/index.html
+++ b/index.html
@@ -15,9 +15,7 @@
         <link href="styles/bootstrap.css" rel="stylesheet" media="screen">
         <link href="styles/bootstrap-theme.min.css" rel="stylesheet" media="screen">
         <!-- endbuild -->
-        <!-- build:js scripts/vendor/modernizr.js -->
-        <script src="bower_components/modernizr/modernizr.js"></script>
-        <!-- endbuild -->
+        <script src="scripts/vendor/d41d8cd9.modernizr.js"></script>
     </head>
     <body>
         <!--[if lt IE 10]>
@@ -53,12 +51,7 @@
         
 
 
-        <!-- build:js scripts/vendor.js -->
-        <!-- bower:js -->
-        <script src="bower_components/jquery/jquery.js"></script>
-        <script src="scripts/bootstrap.min.js"></script>
-        <!-- endbower -->
-        <!-- endbuild -->
+        <script src="scripts/e88d4b41.vendor.js"></script>
 
         <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
         <script>
@@ -70,8 +63,6 @@
             ga('create','UA-XXXXX-X');ga('send','pageview');
         </script>
 
-        <!-- build:js scripts/main.js -->
-        <script src="scripts/main.js"></script>
-        <!-- endbuild -->
+        <script src="scripts/b6c3df09.main.js"></script>
 </body>
 </html>
