--- a/index.html
+++ b/index.html
@@ -10,11 +10,7 @@
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width">
         <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
-        <!-- build:css(.tmp) styles/main.css 
-        <link rel="stylesheet" href="styles/main.css"> -->
-        <link href="styles/bootstrap.css" rel="stylesheet" media="screen">
-        <link href="styles/bootstrap-theme.min.css" rel="stylesheet" media="screen">
-        <!-- endbuild -->
+        <link rel="stylesheet" href="styles/a0b032d4.main.css" media="screen">
         <script src="scripts/vendor/d41d8cd9.modernizr.js"></script>
     </head>
     <body>
